Wed Nov 24 11:19:13 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): treat UTF-16 and UTF-32 as BE or LE.

Wed Nov 24 06:35:32 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf_16_32.trans: add the UTF-32 converter.

Wed Nov 24 05:40:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

Wed Nov 24 06:13:32 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (filecp, wstr_to_mbstr, mbstr_to_wstr):
	  refactored.

Wed Nov 24 05:40:33 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf_16_32.trans: add a converter from UTF-8 to UTF-16.

Wed Nov 24 03:21:35 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/trans/utf_16_32.trans: raise error on unpaired upper
	  surrogates.

Wed Nov 24 01:40:23 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* enc/utf_16_32.h: add UTF-16 and UTF-32 as a dummy encoding.

	* enc/trans/utf_16_32.trans: add a converter from UTF-16 to UTF-8.

Tue Nov 23 21:59:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (wlink, rb_w32_getppid): use typedef instead of
	  repeating compilcated function prototypes.

Tue Nov 23 18:54:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm.c (rb_thread_mark): should mark self in conrol
	  frames.  [ruby-core:33289]

Tue Nov 23 07:57:31 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/delta/parser.{ry,rb}: fixed a bug of token scanner.

Tue Nov 23 07:29:24 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c, rational.c ({nucomp,nurat}_expt): added a check.

Tue Nov 23 07:27:27 2010  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date.rb (daynum): should be private.

Tue Nov 23 07:22:54 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ChangeLog (change-log-indent-text): hunging indent.

Tue Nov 23 06:30:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (SITE_DIR, VENDOR_DIR),
	  version.c (ruby_initial_load_paths): exclude directories that
	  are configured without them from $LOAD_PATH. [ruby-core:33267]
